# quantum-notebook

./: .gitignore  LICENSE  README.md  test.ipynb
.bsp/: sbt.json
Algorithms/Deutsz-Josza /: DJ-MultiQubit.ipynb
Algorithms/GroverSearch/: GroverSearch_2qubits.ipynb  GroverSearch_3qubits.ipynb
Algorithms/QFT/: Inverse.ipynb  QFT-NQubit.ipynb  wave_generation_inverse_qft.ipynb
Algorithms/QPE/: PhaseEstimation.ipynb
Algorithms/Shor/: modulo.ipynb
Algorithms/Simons Algorithm/: 2-Qubit-period-finding.ipynb  (+2 more)
Basics/: BasicSample.ipynb
Chemistry/: h20_qpe.ipynb  h20_vqe.ipynb  h2_qpe.ipynb  h2o_excited_states.ipynb
Circuits/: 3Qubit_teleport_qubit_0_to_2.ipynb  CSwap.ipynb  Estimators.ipynb  H-T-CNOT.ipynb  MutliQubitTafolli.ipynb  PauliStrings.ipynb  QuantumCircuitsExamples.ipynb  U2_2qubit.ipynb  partialMeasurement.ipynb  phase_operator.ipynb  test.ipynb
Cryptography/: BB84.ipynb
Information/: 2-qubit-teleport-bell-basis.ipynb  ErrorCorrection.ipynb  QuantumTeleportation.ipynb  SupendenseCoding.ipynb
Machine learning/: ZZFeatureMap.ipynb
Optimization/: min_vertex.ipynb
QuTip/: 101_example.ipynb
Quantum Cryptography/: BB84.ipynb
iitd/: README.md
qiskit/: BasicSample.ipynb  QFT-3Qubit.ipynb  QuantumCircuitsExamples.ipynb  QuantumTeleportation-MultiQubit.ipynb  README.md  StateVector_example.ipynb  test.ipynb
qiskit/Quantum Cryptography/data_transmission/: BB84.drawio  BB84.ipynb  Cargo.toml  README.md
qiskit/Quantum Cryptography/data_transmission/sender/: sender.rs
tensorflow/: Basic.ipynb
udemy/: quantum-physics-polarisation.txt
(+218 files in other folders)
